--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		$("upperCount").onclick = upperCount;
 		$("lowerCount").onclick = lowerCount;
 		function upperCount(){
-			console.log("hello");
+			console.log("Increment by one");
 			i++
 			$("count").innerHTML = i;
 			if(i>=0){
