--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			console.log(i)
 		}
 		function lowerCount(){
-			console.log('Decrement by one)
+			console.log('Decrement by one')
 			i--
 			$("count").innerHTML = i;
 			if(i<0){
