--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Counter Project</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
+	<meta name='viewport' content='width=device-width '>
 </head>
 <body>
 	<div class="main">
