--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 			console.log("Increment by one");
 			i++
 			$("count").innerHTML = i;
+			
+			// RESPONSIVE COLOUR
 			if(i>=0){
 				$("count").style.color = "#000"
 			}
-			console.log(i)
 		}
 		function lowerCount(){
 			console.log('Decrement by one')
